--- a/config.gradle
+++ b/config.gradle
@@ -23,7 +23,7 @@ ext {
   android = [
       compileSdkVersion: 23,
       buildToolsVersion: "23.0.2",
-      applicationId    : "me.henrytao.bootstrapandroidapp",
+      applicationId    : "me.henrytao.firechatengine",
       minSdkVersion    : 11,
       targetSdkVersion : 23,
       versionCode      : 1,
@@ -42,7 +42,36 @@ ext {
       keyPassword  : "develop"
   ]
 
+  bintray = [
+      bintrayRepo       : "maven",
+      bintrayName       : "firechat-engine",
+
+      publishedGroupId  : "me.henrytao",
+      libraryName       : "Firechat Engine",
+      artifact          : "firechat-engine",
+
+      libraryDescription: "Chat engine using Firebase",
+
+      siteUrl           : "https://github.com/henrytao-me/firechat-engine",
+      gitUrl            : "https://github.com/henrytao-me/firechat-engine.git",
+
+      libraryVersion    : rootProject.ext.android.versionName,
+
+      developerId       : "henrytao",
+      developerName     : "Henry Tao",
+      developerEmail    : "hi@henrytao.me",
+
+      licenseName       : "The Apache Software License, Version 2.0",
+      licenseUrl        : "http://www.apache.org/licenses/LICENSE-2.0.txt",
+      allLicenses       : ["Apache-2.0"]
+  ]
+
   dependencies = [
+      "io.reactivex:rxandroid"               : "io.reactivex:rxandroid:1.2.1",
+      "io.reactivex:rxjava"                  : "io.reactivex:rxjava:1.1.6"
+  ]
+
+  sampleDependencies = [
       "com.android.support:design"         : "com.android.support:design:23.3.0",
       "com.android.support:appcompat-v7"   : "com.android.support:appcompat-v7:23.3.0",
       "com.android.support:cardview-v7"    : "com.android.support:cardview-v7:23.3.0",
@@ -54,9 +83,6 @@ ext {
       "me.henrytao:smooth-app-bar-layout"  : "me.henrytao:smooth-app-bar-layout:3.0.0",
 
       "junit:junit"                        : "junit:junit:4.12",
-      "org.hamcrest:hamcrest-core"         : "org.hamcrest:hamcrest-core:1.3",
-      "org.hamcrest:hamcrest-library"      : "org.hamcrest:hamcrest-library:1.3",
-      "org.hamcrest:hamcrest-integration"  : "org.hamcrest:hamcrest-integration:1.3",
       "org.robolectric:robolectric"        : "org.robolectric:robolectric:3.0",
       "org.robolectric:shadows-core"       : "org.robolectric:shadows-core:3.0",
       "org.robolectric:shadows-support-v4" : "org.robolectric:shadows-support-v4:3.0"
