--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
 -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="me.henrytao.bootstrapandroidapp">
 
@@ -20,11 +21,11 @@
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:name=".App"
+    android:name="me.henrytao.firechatengine.sample.App"
     android:theme="@style/AppTheme">
     <activity
       android:label="@string/app_name"
-      android:name="me.henrytao.bootstrapandroidapp.activity.MainActivity">
+      android:name="me.henrytao.firechatengine.sample.ui.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
