--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include ':firechat-engine'
 /*
  * Copyright 2015 "Henry Tao <hi@henrytao.me>"
  *
@@ -14,4 +15,4 @@
  * limitations under the License.
  */
 
-include ':app'
+include ':sample'
