--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -15,22 +15,29 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="me.henrytao.bootstrapandroidapp">
+  package="me.henrytao.firechatengine.sample">
 
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:name="me.henrytao.firechatengine.sample.App"
+    android:name=".App"
     android:theme="@style/AppTheme">
+
     <activity
       android:label="@string/app_name"
-      android:name="me.henrytao.firechatengine.sample.ui.MainActivity">
+      android:name=".ui.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+
+    <activity
+      android:label="@string/app_name"
+      android:name=".ui.chat.ChatActivity" />
+
+    <service android:name=".service.FirechatBackgroundService" />
   </application>
 </manifest>
