--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
     classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
     classpath "com.github.dcendents:android-maven-gradle-plugin:1.3"
     classpath "com.google.gms:google-services:3.0.0"
+    classpath "com.neenbedankt.gradle.plugins:android-apt:1.8"
     classpath "me.tatarka:gradle-retrolambda:3.2.3"
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -37,5 +38,6 @@ allprojects {
   repositories {
     jcenter()
     mavenCentral()
+    maven { url "https://www.jitpack.io" }
   }
 }
