--- a/firechat-engine/build.gradle
+++ b/firechat-engine/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: "com.android.library"
+apply plugin: "com.neenbedankt.android-apt"
 apply plugin: "me.tatarka.retrolambda"
 
 android {
@@ -48,6 +49,10 @@ retrolambda {
 
 dependencies {
   compile fileTree(dir: "libs", include: ["*.jar"])
+
+  compile rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow"]
+  compile rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow-core"]
+  apt rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow-processor"]
 
   compile rootProject.ext.dependencies["com.google.firebase:firebase-database"]
 
