--- a/firechat-engine/build.gradle
+++ b/firechat-engine/build.gradle
@@ -50,6 +50,8 @@ retrolambda {
 dependencies {
   compile fileTree(dir: "libs", include: ["*.jar"])
 
+  compile rootProject.ext.dependencies["com.esotericsoftware:kryo"]
+
   compile rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow"]
   compile rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow-core"]
   apt rootProject.ext.dependencies["com.github.Raizlabs.DBFlow:dbflow-processor"]
