--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -39,5 +39,18 @@
       android:name=".ui.chat.ChatActivity" />
 
     <service android:name=".service.FirechatBackgroundService" />
+
+    <service android:name=".MagicService" />
+
+    <receiver android:name=".MagicReceiver">
+      <intent-filter>
+        <action android:name="android.intent.action.EXTERNAL_APPLICATIONS_AVAILABLE" />
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+        <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+        <action android:name="android.intent.action.SCREEN_OFF" />
+        <action android:name="android.intent.action.SCREEN_ON" />
+        <action android:name="android.intent.action.USER_PRESENT" />
+      </intent-filter>
+    </receiver>
   </application>
 </manifest>
